parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> INICIO
Rule 1     INICIO -> begin LIBRERIAS CUERPO end
Rule 2     LIBRERIAS -> LIBRERIASP
Rule 3     LIBRERIAS -> EMPTY
Rule 4     LIBRERIASP -> lib parAb nomLib parCerr finLinea LIBRERIAS
Rule 5     CUERPO -> VAR CUERPO
Rule 6     CUERPO -> ASIGN CUERPO
Rule 7     CUERPO -> FUNC CUERPO
Rule 8     CUERPO -> COMENTARIO CUERPO
Rule 9     CUERPO -> SI CUERPO
Rule 10    CUERPO -> SINO CUERPO
Rule 11    CUERPO -> MIENTRAS CUERPO
Rule 12    CUERPO -> PIN CUERPO
Rule 13    CUERPO -> MOV CUERPO
Rule 14    CUERPO -> EMPTY
Rule 15    VAR -> var palResString dosPuntos nomVar finLinea
Rule 16    VAR -> var palResInt dosPuntos nomVar finLinea
Rule 17    VAR -> var palResFloat dosPuntos nomVar finLinea
Rule 18    VAR -> var palResBool dosPuntos nomVar finLinea
Rule 19    ASIGN -> nomVar igual string finLinea
Rule 20    ASIGN -> nomVar igual int finLinea
Rule 21    ASIGN -> nomVar igual float finLinea
Rule 22    ASIGN -> nomVar igual true finLinea
Rule 23    ASIGN -> nomVar igual false finLinea
Rule 24    ASIGN -> nomVar igual nomVar finLinea
Rule 25    FUNC -> proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
Rule 26    FUNC -> proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
Rule 27    PARAM -> TIPODATO dosPuntos nomVar
Rule 28    PARAM -> TIPODATO dosPuntos nomVar coma PARAM
Rule 29    PARAM -> EMPTY
Rule 30    TIPODATO -> palResInt
Rule 31    TIPODATO -> palResString
Rule 32    TIPODATO -> palResFloat
Rule 33    TIPODATO -> palResBool
Rule 34    COMENTARIO -> comBloque
Rule 35    COMENTARIO -> comLinea
Rule 36    SI -> si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
Rule 37    SINO -> si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
Rule 38    MIENTRAS -> mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
Rule 39    COMPARACION -> VALORVAR comp VALORVAR
Rule 40    COMPARACION -> nomVar comp VALORVAR
Rule 41    COMPARACION -> nomVar comp nomVar
Rule 42    COMPARACION -> false
Rule 43    COMPARACION -> true
Rule 44    COMPARACION -> nomVar
Rule 45    VALORVAR -> string
Rule 46    VALORVAR -> true
Rule 47    VALORVAR -> false
Rule 48    VALORVAR -> int
Rule 49    VALORVAR -> float
Rule 50    PIN -> pin parAb pinEnt dosPuntos nomVar parCerr finLinea
Rule 51    PIN -> pin parAb pinSal dosPuntos nomVar parCerr finLinea
Rule 52    MOV -> adel parAb parCerr finLinea
Rule 53    MOV -> atras parAb parCerr finLinea
Rule 54    MOV -> izq parAb parCerr finLinea
Rule 55    MOV -> der parAb parCerr finLinea
Rule 56    MOV -> stop parAb parCerr finLinea
Rule 57    MOV -> esp parAb int parCerr finLinea
Rule 58    MOV -> esp parAb float parCerr finLinea
Rule 59    EMPTY -> <empty>

Terminals, with rules where they appear

adel                 : 52
atras                : 53
begin                : 1
comBloque            : 34
comLinea             : 35
coma                 : 28
comp                 : 39 40 41
corchAb              : 25 26 36 37 37 38
corchCerr            : 25 26 36 37 37 38
der                  : 55
dosPuntos            : 15 16 17 18 26 27 28 50 51
end                  : 1
entonces             : 36 37
error                : 
esp                  : 57 58
false                : 23 42 47
finLinea             : 4 15 16 17 18 19 20 21 22 23 24 25 26 36 37 38 50 51 52 53 54 55 56 57 58
float                : 21 49 58
igual                : 19 20 21 22 23 24
int                  : 20 48 57
izq                  : 54
lib                  : 4
mientras             : 38
nomLib               : 4
nomVar               : 15 16 17 18 19 20 21 22 23 24 24 25 26 27 28 40 41 41 44 50 51
palResBool           : 18 33
palResFloat          : 17 32
palResInt            : 16 30
palResString         : 15 31
parAb                : 4 25 26 36 37 38 50 51 52 53 54 55 56 57 58
parCerr              : 4 25 26 36 37 38 50 51 52 53 54 55 56 57 58
pin                  : 50 51
pinEnt               : 50
pinSal               : 51
proc                 : 25 26
si                   : 36 37
sino                 : 37 38
stop                 : 56
string               : 19 45
true                 : 22 43 46
var                  : 15 16 17 18

Nonterminals, with rules where they appear

ASIGN                : 6
COMENTARIO           : 8
COMPARACION          : 36 37 38
CUERPO               : 1 5 6 7 8 9 10 11 12 13 25 26 36 37 37 38
EMPTY                : 3 14 29
FUNC                 : 7
INICIO               : 0
LIBRERIAS            : 1 4
LIBRERIASP           : 2
MIENTRAS             : 11
MOV                  : 13
PARAM                : 25 26 28
PIN                  : 12
SI                   : 9
SINO                 : 10
TIPODATO             : 26 27 28
VALORVAR             : 39 39 40
VAR                  : 5

Parsing method: LALR

state 0

    (0) S' -> . INICIO
    (1) INICIO -> . begin LIBRERIAS CUERPO end

    begin           shift and go to state 2

    INICIO                         shift and go to state 1

state 1

    (0) S' -> INICIO .



state 2

    (1) INICIO -> begin . LIBRERIAS CUERPO end
    (2) LIBRERIAS -> . LIBRERIASP
    (3) LIBRERIAS -> . EMPTY
    (4) LIBRERIASP -> . lib parAb nomLib parCerr finLinea LIBRERIAS
    (59) EMPTY -> .

    lib             shift and go to state 6
    var             reduce using rule 59 (EMPTY -> .)
    nomVar          reduce using rule 59 (EMPTY -> .)
    proc            reduce using rule 59 (EMPTY -> .)
    comBloque       reduce using rule 59 (EMPTY -> .)
    comLinea        reduce using rule 59 (EMPTY -> .)
    si              reduce using rule 59 (EMPTY -> .)
    mientras        reduce using rule 59 (EMPTY -> .)
    pin             reduce using rule 59 (EMPTY -> .)
    adel            reduce using rule 59 (EMPTY -> .)
    atras           reduce using rule 59 (EMPTY -> .)
    izq             reduce using rule 59 (EMPTY -> .)
    der             reduce using rule 59 (EMPTY -> .)
    stop            reduce using rule 59 (EMPTY -> .)
    esp             reduce using rule 59 (EMPTY -> .)
    end             reduce using rule 59 (EMPTY -> .)

    LIBRERIAS                      shift and go to state 3
    LIBRERIASP                     shift and go to state 4
    EMPTY                          shift and go to state 5

state 3

    (1) INICIO -> begin LIBRERIAS . CUERPO end
    (5) CUERPO -> . VAR CUERPO
    (6) CUERPO -> . ASIGN CUERPO
    (7) CUERPO -> . FUNC CUERPO
    (8) CUERPO -> . COMENTARIO CUERPO
    (9) CUERPO -> . SI CUERPO
    (10) CUERPO -> . SINO CUERPO
    (11) CUERPO -> . MIENTRAS CUERPO
    (12) CUERPO -> . PIN CUERPO
    (13) CUERPO -> . MOV CUERPO
    (14) CUERPO -> . EMPTY
    (15) VAR -> . var palResString dosPuntos nomVar finLinea
    (16) VAR -> . var palResInt dosPuntos nomVar finLinea
    (17) VAR -> . var palResFloat dosPuntos nomVar finLinea
    (18) VAR -> . var palResBool dosPuntos nomVar finLinea
    (19) ASIGN -> . nomVar igual string finLinea
    (20) ASIGN -> . nomVar igual int finLinea
    (21) ASIGN -> . nomVar igual float finLinea
    (22) ASIGN -> . nomVar igual true finLinea
    (23) ASIGN -> . nomVar igual false finLinea
    (24) ASIGN -> . nomVar igual nomVar finLinea
    (25) FUNC -> . proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
    (26) FUNC -> . proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
    (34) COMENTARIO -> . comBloque
    (35) COMENTARIO -> . comLinea
    (36) SI -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
    (37) SINO -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
    (38) MIENTRAS -> . mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
    (50) PIN -> . pin parAb pinEnt dosPuntos nomVar parCerr finLinea
    (51) PIN -> . pin parAb pinSal dosPuntos nomVar parCerr finLinea
    (52) MOV -> . adel parAb parCerr finLinea
    (53) MOV -> . atras parAb parCerr finLinea
    (54) MOV -> . izq parAb parCerr finLinea
    (55) MOV -> . der parAb parCerr finLinea
    (56) MOV -> . stop parAb parCerr finLinea
    (57) MOV -> . esp parAb int parCerr finLinea
    (58) MOV -> . esp parAb float parCerr finLinea
    (59) EMPTY -> .

    var             shift and go to state 18
    nomVar          shift and go to state 19
    proc            shift and go to state 20
    comBloque       shift and go to state 21
    comLinea        shift and go to state 22
    si              shift and go to state 23
    mientras        shift and go to state 24
    pin             shift and go to state 25
    adel            shift and go to state 26
    atras           shift and go to state 27
    izq             shift and go to state 28
    der             shift and go to state 29
    stop            shift and go to state 30
    esp             shift and go to state 31
    end             reduce using rule 59 (EMPTY -> .)

    CUERPO                         shift and go to state 7
    VAR                            shift and go to state 8
    ASIGN                          shift and go to state 9
    FUNC                           shift and go to state 10
    COMENTARIO                     shift and go to state 11
    SI                             shift and go to state 12
    SINO                           shift and go to state 13
    MIENTRAS                       shift and go to state 14
    PIN                            shift and go to state 15
    MOV                            shift and go to state 16
    EMPTY                          shift and go to state 17

state 4

    (2) LIBRERIAS -> LIBRERIASP .

    var             reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    nomVar          reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    proc            reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    comBloque       reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    comLinea        reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    si              reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    mientras        reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    pin             reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    adel            reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    atras           reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    izq             reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    der             reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    stop            reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    esp             reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)
    end             reduce using rule 2 (LIBRERIAS -> LIBRERIASP .)


state 5

    (3) LIBRERIAS -> EMPTY .

    var             reduce using rule 3 (LIBRERIAS -> EMPTY .)
    nomVar          reduce using rule 3 (LIBRERIAS -> EMPTY .)
    proc            reduce using rule 3 (LIBRERIAS -> EMPTY .)
    comBloque       reduce using rule 3 (LIBRERIAS -> EMPTY .)
    comLinea        reduce using rule 3 (LIBRERIAS -> EMPTY .)
    si              reduce using rule 3 (LIBRERIAS -> EMPTY .)
    mientras        reduce using rule 3 (LIBRERIAS -> EMPTY .)
    pin             reduce using rule 3 (LIBRERIAS -> EMPTY .)
    adel            reduce using rule 3 (LIBRERIAS -> EMPTY .)
    atras           reduce using rule 3 (LIBRERIAS -> EMPTY .)
    izq             reduce using rule 3 (LIBRERIAS -> EMPTY .)
    der             reduce using rule 3 (LIBRERIAS -> EMPTY .)
    stop            reduce using rule 3 (LIBRERIAS -> EMPTY .)
    esp             reduce using rule 3 (LIBRERIAS -> EMPTY .)
    end             reduce using rule 3 (LIBRERIAS -> EMPTY .)


state 6

    (4) LIBRERIASP -> lib . parAb nomLib parCerr finLinea LIBRERIAS

    parAb           shift and go to state 32


state 7

    (1) INICIO -> begin LIBRERIAS CUERPO . end

    end             shift and go to state 33


state 8

    (5) CUERPO -> VAR . CUERPO
    (5) CUERPO -> . VAR CUERPO
    (6) CUERPO -> . ASIGN CUERPO
    (7) CUERPO -> . FUNC CUERPO
    (8) CUERPO -> . COMENTARIO CUERPO
    (9) CUERPO -> . SI CUERPO
    (10) CUERPO -> . SINO CUERPO
    (11) CUERPO -> . MIENTRAS CUERPO
    (12) CUERPO -> . PIN CUERPO
    (13) CUERPO -> . MOV CUERPO
    (14) CUERPO -> . EMPTY
    (15) VAR -> . var palResString dosPuntos nomVar finLinea
    (16) VAR -> . var palResInt dosPuntos nomVar finLinea
    (17) VAR -> . var palResFloat dosPuntos nomVar finLinea
    (18) VAR -> . var palResBool dosPuntos nomVar finLinea
    (19) ASIGN -> . nomVar igual string finLinea
    (20) ASIGN -> . nomVar igual int finLinea
    (21) ASIGN -> . nomVar igual float finLinea
    (22) ASIGN -> . nomVar igual true finLinea
    (23) ASIGN -> . nomVar igual false finLinea
    (24) ASIGN -> . nomVar igual nomVar finLinea
    (25) FUNC -> . proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
    (26) FUNC -> . proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
    (34) COMENTARIO -> . comBloque
    (35) COMENTARIO -> . comLinea
    (36) SI -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
    (37) SINO -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
    (38) MIENTRAS -> . mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
    (50) PIN -> . pin parAb pinEnt dosPuntos nomVar parCerr finLinea
    (51) PIN -> . pin parAb pinSal dosPuntos nomVar parCerr finLinea
    (52) MOV -> . adel parAb parCerr finLinea
    (53) MOV -> . atras parAb parCerr finLinea
    (54) MOV -> . izq parAb parCerr finLinea
    (55) MOV -> . der parAb parCerr finLinea
    (56) MOV -> . stop parAb parCerr finLinea
    (57) MOV -> . esp parAb int parCerr finLinea
    (58) MOV -> . esp parAb float parCerr finLinea
    (59) EMPTY -> .

    var             shift and go to state 18
    nomVar          shift and go to state 19
    proc            shift and go to state 20
    comBloque       shift and go to state 21
    comLinea        shift and go to state 22
    si              shift and go to state 23
    mientras        shift and go to state 24
    pin             shift and go to state 25
    adel            shift and go to state 26
    atras           shift and go to state 27
    izq             shift and go to state 28
    der             shift and go to state 29
    stop            shift and go to state 30
    esp             shift and go to state 31
    end             reduce using rule 59 (EMPTY -> .)
    corchCerr       reduce using rule 59 (EMPTY -> .)

    VAR                            shift and go to state 8
    CUERPO                         shift and go to state 34
    ASIGN                          shift and go to state 9
    FUNC                           shift and go to state 10
    COMENTARIO                     shift and go to state 11
    SI                             shift and go to state 12
    SINO                           shift and go to state 13
    MIENTRAS                       shift and go to state 14
    PIN                            shift and go to state 15
    MOV                            shift and go to state 16
    EMPTY                          shift and go to state 17

state 9

    (6) CUERPO -> ASIGN . CUERPO
    (5) CUERPO -> . VAR CUERPO
    (6) CUERPO -> . ASIGN CUERPO
    (7) CUERPO -> . FUNC CUERPO
    (8) CUERPO -> . COMENTARIO CUERPO
    (9) CUERPO -> . SI CUERPO
    (10) CUERPO -> . SINO CUERPO
    (11) CUERPO -> . MIENTRAS CUERPO
    (12) CUERPO -> . PIN CUERPO
    (13) CUERPO -> . MOV CUERPO
    (14) CUERPO -> . EMPTY
    (15) VAR -> . var palResString dosPuntos nomVar finLinea
    (16) VAR -> . var palResInt dosPuntos nomVar finLinea
    (17) VAR -> . var palResFloat dosPuntos nomVar finLinea
    (18) VAR -> . var palResBool dosPuntos nomVar finLinea
    (19) ASIGN -> . nomVar igual string finLinea
    (20) ASIGN -> . nomVar igual int finLinea
    (21) ASIGN -> . nomVar igual float finLinea
    (22) ASIGN -> . nomVar igual true finLinea
    (23) ASIGN -> . nomVar igual false finLinea
    (24) ASIGN -> . nomVar igual nomVar finLinea
    (25) FUNC -> . proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
    (26) FUNC -> . proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
    (34) COMENTARIO -> . comBloque
    (35) COMENTARIO -> . comLinea
    (36) SI -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
    (37) SINO -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
    (38) MIENTRAS -> . mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
    (50) PIN -> . pin parAb pinEnt dosPuntos nomVar parCerr finLinea
    (51) PIN -> . pin parAb pinSal dosPuntos nomVar parCerr finLinea
    (52) MOV -> . adel parAb parCerr finLinea
    (53) MOV -> . atras parAb parCerr finLinea
    (54) MOV -> . izq parAb parCerr finLinea
    (55) MOV -> . der parAb parCerr finLinea
    (56) MOV -> . stop parAb parCerr finLinea
    (57) MOV -> . esp parAb int parCerr finLinea
    (58) MOV -> . esp parAb float parCerr finLinea
    (59) EMPTY -> .

    var             shift and go to state 18
    nomVar          shift and go to state 19
    proc            shift and go to state 20
    comBloque       shift and go to state 21
    comLinea        shift and go to state 22
    si              shift and go to state 23
    mientras        shift and go to state 24
    pin             shift and go to state 25
    adel            shift and go to state 26
    atras           shift and go to state 27
    izq             shift and go to state 28
    der             shift and go to state 29
    stop            shift and go to state 30
    esp             shift and go to state 31
    end             reduce using rule 59 (EMPTY -> .)
    corchCerr       reduce using rule 59 (EMPTY -> .)

    ASIGN                          shift and go to state 9
    CUERPO                         shift and go to state 35
    VAR                            shift and go to state 8
    FUNC                           shift and go to state 10
    COMENTARIO                     shift and go to state 11
    SI                             shift and go to state 12
    SINO                           shift and go to state 13
    MIENTRAS                       shift and go to state 14
    PIN                            shift and go to state 15
    MOV                            shift and go to state 16
    EMPTY                          shift and go to state 17

state 10

    (7) CUERPO -> FUNC . CUERPO
    (5) CUERPO -> . VAR CUERPO
    (6) CUERPO -> . ASIGN CUERPO
    (7) CUERPO -> . FUNC CUERPO
    (8) CUERPO -> . COMENTARIO CUERPO
    (9) CUERPO -> . SI CUERPO
    (10) CUERPO -> . SINO CUERPO
    (11) CUERPO -> . MIENTRAS CUERPO
    (12) CUERPO -> . PIN CUERPO
    (13) CUERPO -> . MOV CUERPO
    (14) CUERPO -> . EMPTY
    (15) VAR -> . var palResString dosPuntos nomVar finLinea
    (16) VAR -> . var palResInt dosPuntos nomVar finLinea
    (17) VAR -> . var palResFloat dosPuntos nomVar finLinea
    (18) VAR -> . var palResBool dosPuntos nomVar finLinea
    (19) ASIGN -> . nomVar igual string finLinea
    (20) ASIGN -> . nomVar igual int finLinea
    (21) ASIGN -> . nomVar igual float finLinea
    (22) ASIGN -> . nomVar igual true finLinea
    (23) ASIGN -> . nomVar igual false finLinea
    (24) ASIGN -> . nomVar igual nomVar finLinea
    (25) FUNC -> . proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
    (26) FUNC -> . proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
    (34) COMENTARIO -> . comBloque
    (35) COMENTARIO -> . comLinea
    (36) SI -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
    (37) SINO -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
    (38) MIENTRAS -> . mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
    (50) PIN -> . pin parAb pinEnt dosPuntos nomVar parCerr finLinea
    (51) PIN -> . pin parAb pinSal dosPuntos nomVar parCerr finLinea
    (52) MOV -> . adel parAb parCerr finLinea
    (53) MOV -> . atras parAb parCerr finLinea
    (54) MOV -> . izq parAb parCerr finLinea
    (55) MOV -> . der parAb parCerr finLinea
    (56) MOV -> . stop parAb parCerr finLinea
    (57) MOV -> . esp parAb int parCerr finLinea
    (58) MOV -> . esp parAb float parCerr finLinea
    (59) EMPTY -> .

    var             shift and go to state 18
    nomVar          shift and go to state 19
    proc            shift and go to state 20
    comBloque       shift and go to state 21
    comLinea        shift and go to state 22
    si              shift and go to state 23
    mientras        shift and go to state 24
    pin             shift and go to state 25
    adel            shift and go to state 26
    atras           shift and go to state 27
    izq             shift and go to state 28
    der             shift and go to state 29
    stop            shift and go to state 30
    esp             shift and go to state 31
    end             reduce using rule 59 (EMPTY -> .)
    corchCerr       reduce using rule 59 (EMPTY -> .)

    FUNC                           shift and go to state 10
    CUERPO                         shift and go to state 36
    VAR                            shift and go to state 8
    ASIGN                          shift and go to state 9
    COMENTARIO                     shift and go to state 11
    SI                             shift and go to state 12
    SINO                           shift and go to state 13
    MIENTRAS                       shift and go to state 14
    PIN                            shift and go to state 15
    MOV                            shift and go to state 16
    EMPTY                          shift and go to state 17

state 11

    (8) CUERPO -> COMENTARIO . CUERPO
    (5) CUERPO -> . VAR CUERPO
    (6) CUERPO -> . ASIGN CUERPO
    (7) CUERPO -> . FUNC CUERPO
    (8) CUERPO -> . COMENTARIO CUERPO
    (9) CUERPO -> . SI CUERPO
    (10) CUERPO -> . SINO CUERPO
    (11) CUERPO -> . MIENTRAS CUERPO
    (12) CUERPO -> . PIN CUERPO
    (13) CUERPO -> . MOV CUERPO
    (14) CUERPO -> . EMPTY
    (15) VAR -> . var palResString dosPuntos nomVar finLinea
    (16) VAR -> . var palResInt dosPuntos nomVar finLinea
    (17) VAR -> . var palResFloat dosPuntos nomVar finLinea
    (18) VAR -> . var palResBool dosPuntos nomVar finLinea
    (19) ASIGN -> . nomVar igual string finLinea
    (20) ASIGN -> . nomVar igual int finLinea
    (21) ASIGN -> . nomVar igual float finLinea
    (22) ASIGN -> . nomVar igual true finLinea
    (23) ASIGN -> . nomVar igual false finLinea
    (24) ASIGN -> . nomVar igual nomVar finLinea
    (25) FUNC -> . proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
    (26) FUNC -> . proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
    (34) COMENTARIO -> . comBloque
    (35) COMENTARIO -> . comLinea
    (36) SI -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
    (37) SINO -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
    (38) MIENTRAS -> . mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
    (50) PIN -> . pin parAb pinEnt dosPuntos nomVar parCerr finLinea
    (51) PIN -> . pin parAb pinSal dosPuntos nomVar parCerr finLinea
    (52) MOV -> . adel parAb parCerr finLinea
    (53) MOV -> . atras parAb parCerr finLinea
    (54) MOV -> . izq parAb parCerr finLinea
    (55) MOV -> . der parAb parCerr finLinea
    (56) MOV -> . stop parAb parCerr finLinea
    (57) MOV -> . esp parAb int parCerr finLinea
    (58) MOV -> . esp parAb float parCerr finLinea
    (59) EMPTY -> .

    var             shift and go to state 18
    nomVar          shift and go to state 19
    proc            shift and go to state 20
    comBloque       shift and go to state 21
    comLinea        shift and go to state 22
    si              shift and go to state 23
    mientras        shift and go to state 24
    pin             shift and go to state 25
    adel            shift and go to state 26
    atras           shift and go to state 27
    izq             shift and go to state 28
    der             shift and go to state 29
    stop            shift and go to state 30
    esp             shift and go to state 31
    end             reduce using rule 59 (EMPTY -> .)
    corchCerr       reduce using rule 59 (EMPTY -> .)

    COMENTARIO                     shift and go to state 11
    CUERPO                         shift and go to state 37
    VAR                            shift and go to state 8
    ASIGN                          shift and go to state 9
    FUNC                           shift and go to state 10
    SI                             shift and go to state 12
    SINO                           shift and go to state 13
    MIENTRAS                       shift and go to state 14
    PIN                            shift and go to state 15
    MOV                            shift and go to state 16
    EMPTY                          shift and go to state 17

state 12

    (9) CUERPO -> SI . CUERPO
    (5) CUERPO -> . VAR CUERPO
    (6) CUERPO -> . ASIGN CUERPO
    (7) CUERPO -> . FUNC CUERPO
    (8) CUERPO -> . COMENTARIO CUERPO
    (9) CUERPO -> . SI CUERPO
    (10) CUERPO -> . SINO CUERPO
    (11) CUERPO -> . MIENTRAS CUERPO
    (12) CUERPO -> . PIN CUERPO
    (13) CUERPO -> . MOV CUERPO
    (14) CUERPO -> . EMPTY
    (15) VAR -> . var palResString dosPuntos nomVar finLinea
    (16) VAR -> . var palResInt dosPuntos nomVar finLinea
    (17) VAR -> . var palResFloat dosPuntos nomVar finLinea
    (18) VAR -> . var palResBool dosPuntos nomVar finLinea
    (19) ASIGN -> . nomVar igual string finLinea
    (20) ASIGN -> . nomVar igual int finLinea
    (21) ASIGN -> . nomVar igual float finLinea
    (22) ASIGN -> . nomVar igual true finLinea
    (23) ASIGN -> . nomVar igual false finLinea
    (24) ASIGN -> . nomVar igual nomVar finLinea
    (25) FUNC -> . proc nomVar parAb PARAM parCerr corchAb CUERPO corchCerr finLinea
    (26) FUNC -> . proc nomVar parAb PARAM parCerr dosPuntos TIPODATO corchAb CUERPO corchCerr finLinea
    (34) COMENTARIO -> . comBloque
    (35) COMENTARIO -> . comLinea
    (36) SI -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr finLinea
    (37) SINO -> . si parAb COMPARACION parCerr entonces corchAb CUERPO corchCerr sino corchAb CUERPO corchCerr finLinea
    (38) MIENTRAS -> . mientras parAb COMPARACION parCerr corchAb CUERPO corchCerr sino finLinea
    (50) PIN -> . pin parAb pinEnt dosPuntos nomVar parCerr finLinea
    (51) PIN -> . pin parAb pinSal dosPuntos nomVar parCerr finLinea
    (52) MOV -> . adel parAb parCerr finLinea
    (53) MOV -> . atras parAb parCerr finLinea
    (54) MOV -> . izq parAb parCerr finLinea
    (55) MOV -> . der parAb parCerr finLinea
    (56) MOV -> . stop parAb parCerr finLinea
    (57) MOV -> . esp parAb int parCerr finLinea
    (58) MOV -> . esp parAb float parCerr finLinea
    (59) EMPTY -> .

    var             shift and go to state 18
    nomVar          shift and go to state 19
    proc            shift and go to state 20
    comBloque       shift and go to state 21
    comLinea        shift and go to state 22
    si              shift and go to state 23
    mientras        shift and go to state 24
    pin             shift and go to state 25
    adel            shift and go to state 26
    atras           shift and go to state 27
    izq             shift and go to state 28
    der             shift and go to state 29
    stop            shift and go to state 30
    esp             shift and go to state 31
    end             reduce using rule 59 (EMPTY -> .)
    corchCerr       reduce using rule 59 (EMPTY -> .)
